--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,19 @@ services:
     networks:
       - app-network
 
+  web:
+    image: nginx:1.27-alpine
+    container_name: nginx-app
+    ports:
+      - "80:80"
+    volumes:
+      - ./src:/var/www
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - app
+    networks:
+      - app-network
+
 networks:
   app-network:
     driver: bridge
