--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
 
   web:
     image: nginx:1.27-alpine
-    container_name: nginx-app
+    container_name: nginx-server
     ports:
       - "80:80"
     volumes:
@@ -37,6 +37,28 @@ services:
     networks:
       - app-network
 
+  db:
+    container_name: postgres-db
+
+    image: postgres:17.2-alpine
+    restart: unless-stopped
+    expose:
+      - "5432"
+    ports:
+      - "5433:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    networks:
+      - app-network
+
 networks:
   app-network:
     driver: bridge
+
+volumes:
+  pgdata:
+
