--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,42 +1,42 @@
 # Set the base image for subsequent instructions
 FROM php:8.2-fpm
 
+# Set working directory
+WORKDIR /var/www
+
 # Install dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
     libpng-dev \
+    libjpeg62-turbo-dev \
+    libfreetype6-dev \
+    libpq-dev \
     libonig-dev \
-    libxml2-dev \
+    libzip-dev \
+    locales \
     zip \
-    curl \
+    jpegoptim optipng pngquant gifsicle \
+    vim \
     unzip \
     git \
-    libzip-dev \
-    libfreetype6-dev \
-    libjpeg62-turbo-dev \
-    libpng-dev && \
-    docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd zip
+    curl
 
-# Clear cache
-RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+# Install PHP extensions
+RUN docker-php-ext-install pdo pdo_mysql pdo_pgsql mbstring zip exif pcntl
+RUN docker-php-ext-configure gd --with-freetype --with-jpeg
+RUN docker-php-ext-install gd
 
 # Install Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
-
-# Set working directory
-WORKDIR /var/www
-
-# Remove default server definition
-RUN rm -rf /var/www/html
-
-# Change current user to www
-USER www-data
 
 # Copy existing application directory contents
 COPY . /var/www
 
 # Copy existing application directory permissions
 COPY --chown=www-data:www-data . /var/www
+
+# Change current user to www
+USER www-data
 
 # Expose port 9000 and start php-fpm server
 EXPOSE 9000
